Fixed overflowing lists on shopping-cart-view.

--- a/p2-manager-frontend/public/style.css
+++ b/p2-manager-frontend/public/style.css
@@ -48,3 +48,7 @@ md-input-container {
     min-height: 200px;
     max-height: 200px;
 }
+
+#fullPageList {
+    max-height: 80vh;
+}
